<resources>
    <string name="app_name">Amour</string>
    <string name="app_name_for_deep" translatable="false">Amour</string>
    <string name="mapKey" templateMergeStrategy="preserve" translatable="false">AIzaSyCrl3IPvHk2S58hJcKeNgOmF2g0hhr8YHk</string>
    <string name="ONESIGNAL_APP_ID" templateMergeStrategy="preserve" translatable="false">d509d6cb-ebf0-49ff-9db6-a4f8a9c70c9b</string>
    <string name="message_yes">Yes</string>
    <string name="message_no">No</string>
    <string name="text_save">Save</string>
    <string name="text_login_password">Password</string>
    <string name="text_login_forgot_password">Forgot Password?</string>
    <string name="text_login_login">Login</string>
    <string name="text_sign_in_with">OR Sign in with</string>
    <string name="text_login_dont_have_an_account">Don\'t have an account ?</string>
    <string name="text_country_bahrain" translatable="false">Bahrain</string>
    <string name="text_profile_phone_number">Phone number </string>
    <string name="text_title_edit_profile">Edit Profile</string>
    <string name="text_title_about_us">About Us</string>
    <string name="text_title_select_language">Please Select Language</string>
    <string name="text_registration_email_id">Email Id</string>
    <string name="text_registration_change_password">Change Password</string>
    <string name="string_menu_home">Home</string>
    <string name="text_langiage_english">English</string>
    <string name="text_language_arabic">Arabic</string>
    <string name="text_edit_profile_change_password">Change Password</string>
    <string name="cancel_label">Cancel</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500</string>
    <string name="dummy1">Lorem Ipsum is simply dummy text </string>
    <string name="dummy2" translatable="false">A tour of the application </string>
    <string name="by_app">by_app</string>
    <string name="share_with">share with</string>
    <string name="share_with_product">Share Product</string>
    <string name="no_address">no Address</string>
    <string name="choose_country">please Choose Country </string>
    <string name="choose_nearest">please Choose Nearest  Branch </string>
    <string name="create_account">Create Account</string>
    <string name="remember">Remember</string>
    <string name="skip_register">Skip Register</string>
    <string name="skip_login">Skip Login</string>
    <string name="new_member">New Member</string>
    <string name="register_now">Register Now</string>
    <string name="first_name">First Name</string>
    <string name="text_confirm_password">Confirm Passward</string>
    <string name="login_now">Login Now</string>
    <string name="terms1"> By clicking on Register and Accept, you acknowledge that you have read </string>
    <string name="terms2">Privacy policy</string>
    <string name="terms3">and agree to</string>
    <string name="terms4">the terms of  Amour</string>
    <string name="confirm">Confirm</string>
    <string name="reset_pass">Reset Password</string>
    <string name="forget_pass">Forget Password</string>
    <string name="enter_code1">Please enter the code</string>
    <string name="enter_phone">Please enter the registered mobile number To retrieve the password</string>
    <string name="search_product">Search Product Here</string>
    <string name="view_all">View All</string>
    <string name="best_products">Featured Product</string>
    <string name="best_sell">Most Selling Products</string>
    <string name="offers">Offered Products </string>
    <string name="product_name">product name product name product name</string>
    <string name="_10220_aed">1.935</string>
    <string name="_50_off">50 % OFF</string>
    <string name="category">Categories</string>
    <string name="cart">Cart</string>
    <string name="myaccount">Profile</string>
    <string name="offer_text">Offers </string>
    <string name="fail_to_get_data">Fail to get data</string>
    <string name="reload">Reload</string>
    <string name="suggested_product">Suggested Products</string>
    <string name="featured_product">Featured Products</string>
    <string name="product_desc">Product Options</string>
    <string name="product_review">Customer Reviews</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="fav_products"> Favorite Products</string>
    <string name="my_order">My Orders</string>
    <string name="address"> Address</string>
    <string name="customer_service">Customer support</string>
    <string name="lang_setting">Language setting </string>
    <string name="change_city_branch">Change Branch</string>
    <string name="conditions">Terms and Conditions</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">logout</string>
    <string name="dummy_text">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق. هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.</string>
    <string name="app_version">App Version</string>
    <string name="accept">Accept</string>
    <string name="add_rate">Please add a rating for the application services</string>
    <string name="rate_product">Rate Product</string>
    <string name="Edit">Edit</string>
    <string name="complete_request">Complete Order</string>
    <string name="DeliveryTime1">Delivery Time </string>
    <string name="rateRequest">Rate Order</string>
    <string name="request_no">Order Number:</string>
    <string name="ordered">ordered</string>
    <string name="order_send">Order Send </string>
    <string name="orderDetails">Bill Details</string>
    <string name="current_orders">Current Orders</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="name">Name</string>
    <string name="add_new_address">Add New Address</string>
    <string name="new_address">New Address</string>
    <string name="block_kw">block Number </string>
    <string name="street_num">Street Number</string>
    <string name="building">Building Number</string>
    <string name="flat">Flat Number</string>
    <string name="phonePermissionExplain">You have just denied phone call permission,
        You can\'t make any call until you accept the permission</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="take_pic">Take Photo</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="do_yo_want">Do you want to shop now ?!</string>
    <string name="please_login">Please log in to log in to  </string>
    <string name="account_data">Your account information</string>
    <string name="register">Register</string>
    <string name="choose_branch">Please Choose Branch</string>
    <string name="ar_lang">اللغة العربية</string>
    <string name="en_lang">English</string>
    <string name="invoice_details">Invoice Details </string>
    <string name="total">Total</string>
    <string name="reorder_cart">Reorder Cart</string>
    <string name="reorder_product">Re Order Product</string>
    <string name="price">price</string>
    <string name="pieces">Pieces</string>
    <string name="textContinuePurchaseBtn">CheckOut</string>
    <string name="text_card_name">Card Holder Name</string>
    <string name="text_card_num">Card Number</string>
    <string name="text_card_date">Card Expire Date</string>
    <string name="default_card">Using The Default Card</string>
    <string name="choose_card_type">Choose Card Type</string>
    <string name="enter_amount">Determine how much credit you want Add it to the wallet</string>
    <string name="AED">AED</string>
    <string name="follow">Follow</string>
    <string name="add_balance">Add Balance</string>
    <string name="no_balance">Sorry !!</string>
    <string name="no_balance1">You do not have enough balance Click here to add credit</string>
    <string name="Hello">hello</string>
    <string name="enter_message">Enter Message</string>
    <string name="add_comment">Please add a comment to the product</string>
    <string name="add">Add</string>
    <string name="add_comm">Add Comment</string>
    <string name="product_total">Item Total</string>
    <string name="deliver_fees">Delivery Fees</string>
    <string name="choose_payment_type">Choose a payment Method </string>
    <string name="delivery_send">Pay</string>
    <string name="save_update">Continue Editing</string>
    <string name="textFromtime">9 A.m  9 P.M </string>
    <string name="delete">delete</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="fail_signin">Fail To sign in</string>
    <string name="please_wait_login">Please wait to  login</string>
    <string name="text_email">Email</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password_confirm_not_match">Password confirm not match</string>
    <string name="enter_name">Enter Name</string>
    <string name="please_wait_register">please Wait to register </string>
    <string name="fail_register">Fail to register</string>
    <string name="error_in_data">Error in data</string>
    <string name="fail_to_sign_out">Fail to sign out</string>
    <string name="want_to_signout">Do yo want to sign out?</string>
    <string name="please_wait_upload">Please wait to Get Data</string>
    <string name="upload_date">Get Data</string>
    <string name="enter_country_name_to_search">Enter country name or code to search</string>
    <string name="enter_city_name_to_search">Enter City name to search</string>
    <string name="title">title</string>
    <string name="fail_to_sen_otp">fail to sent otp</string>
    <string name="confirm_code">Confrim Code</string>
    <string name="please_wait_sending">Please wait sending ...</string>
    <string name="oman_shotname" translatable="false">OM</string>
    <string name="payment_success">Payment Successful</string>
    <string name="payment_fail">Payment Fail</string>
    <string name="payment_status">Payment Status</string>
    <string name="will_be_deliverd">Will be delivered on </string>
    <string name="the_fastest_way_to_shop_in_store">The fastest way to shop in-store</string>
    <string name="start_shopping">You can start shopping in-store and using the online barcode scanner to speed up your in-store shopping experience.</string>
    <string name="setting">setting</string>
    <string name="History">History</string>
    <string name="FastQ">FastQ</string>
    <string name="continuous_scan">Continuous Scan</string>
    <string name="continuous_scan_hint">When ON, you don\'t need to press \" Scan Again\". Items will be automatically scanned when you focus on the barcode.</string>
    <string name="sound_alert">Sound and Alert</string>
    <string name="sound_alert_hint">Play sound for product scan and interactions.</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>
    <string name="price_high_to_low">Price High to Low</string>
    <string name="price_low_to_high">Price Low to High</string>
    <string name="name_high_to_low">Name High to Low</string>
    <string name="name_low_to_high">Name Low to High</string>
</resources>