<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.amour.shop.SpichalViews.STextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continuous_scan"
                android:textColor="@color/header2"
                android:textSize="@dimen/_12ssp" />

            <com.amour.shop.SpichalViews.STextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/continuous_scan_hint"
                android:textColor="@color/header3"
                android:textSize="@dimen/_10ssp" />


        </LinearLayout>

        <com.amour.shop.SpichalViews.SSwitch
            android:id="@+id/continuousScanSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/checkBoxGreenStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.amour.shop.SpichalViews.STextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound_alert"
                android:textColor="@color/header2"
                android:textSize="@dimen/_12ssp" />

            <com.amour.shop.SpichalViews.STextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound_alert_hint"
                android:textColor="@color/header3"
                android:textSize="@dimen/_10ssp" />


        </LinearLayout>

        <com.amour.shop.SpichalViews.SSwitch
            android:id="@+id/soundSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/checkBoxGreenStyle" />

    </LinearLayout>

</LinearLayout>


