<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.PayFailActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical">


        <com.amour.shop.SpichalViews.STextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/payment_success"
            android:textColor="@color/black"
            android:visibility="gone" />

        <com.amour.shop.SpichalViews.STextViewBold
            android:id="@+id/orderIDTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:text="OD004093"
            android:textColor="@color/green1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@color/white"
            android:contentDescription="@string/app_name"
            android:src="@drawable/declined" />

        <com.amour.shop.SpichalViews.STextViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/payment_status"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <com.amour.shop.SpichalViews.STextView
            android:id="@+id/messageTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:textSize="@dimen/_14ssp"
            android:gravity="center"
            android:text="@string/payment_fail" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/round_corner_grey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_6sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_tick" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.amour.shop.SpichalViews.STextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/will_be_deliverd" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.amour.shop.SpichalViews.STextViewBold
                        android:id="@+id/deliveryDayTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:text="Monday"
                        android:textColor="@color/black" />

                    <com.amour.shop.SpichalViews.STextViewBold
                        android:id="@+id/deliveryTimeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="08:00 PM - 10:00 PM "
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>