<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:orientation="vertical"
    tools:context=".activities.FastQActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="0dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_fastq_big" />

    <com.ramez.shopp.SpichalViews.STextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/the_fastest_way_to_shop_in_store"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_margin="@dimen/_16sdp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_fastback" />

        <com.ramez.shopp.SpichalViews.STextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/start_shopping"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/_16sdp"
        android:src="@drawable/ic_click_here" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/settingBut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp">

            <ImageView
                android:id="@+id/item_icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_6sdp"
                android:gravity="center"
                android:src="@drawable/ic_setting_red" />

            <com.ramez.shopp.SpichalViews.STextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/scanBut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:background="@drawable/round_corner_green_fill_big"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/ic_scan_border"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:gravity="center"
                    android:src="@drawable/ic_barcode_white" />

                <com.ramez.shopp.SpichalViews.STextViewBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/FastQ"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>




        </RelativeLayout>

        <LinearLayout
            android:id="@+id/historyBut"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp">

            <ImageView
                android:id="@+id/item_icon_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_6sdp"
                android:gravity="center"
                android:src="@drawable/ic_history"
                android:textSize="@dimen/_15ssp" />

            <com.ramez.shopp.SpichalViews.STextView
                android:id="@+id/item_title_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:text="@string/History"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>